--- a/BookStore/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/BookStore/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>@ViewBag.Title</title>
 
+    <!--App Icon-->
+    <link rel="shortcut icon" type="image/x-icon" href="@Url.Content("~/Images/books.png")" />
+
     <!-- Google Font: Source Sans Pro -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
     <!-- Font Awesome -->
@@ -12,7 +15,7 @@
     <!-- Theme style -->
     <link href="@Url.Content("~/Content/bootstrap.min.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Content/bootstrap.css")" rel="stylesheet" />
-    <link rel="stylesheet" href="@Url.Content("~/Assets/Admin/dist/css/adminlte.min.css")"/>
+    <link rel="stylesheet" href="@Url.Content("~/Assets/Admin/dist/css/adminlte.min.css")" />
     <link href="@Url.Content("~/Content/PagedList.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Assets/fontawesome/css/all.css")" rel="stylesheet" />
 </head>
