--- a/BookStore/Views/UserSession/Login.cshtml
+++ b/BookStore/Views/UserSession/Login.cshtml
@@ -11,6 +11,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đăng nhập</title>
+    <link rel="shortcut icon" type="image/x-icon" href="@Url.Content("~/Images/books.png")" />
     <link rel="stylesheet" href="@Url.Content("~/Assets/Client/usersession/fonts/material-icon/css/material-design-iconic-font.min.css")">
     <!-- Main css -->
     <link href="@Url.Content("~/Content/bootstrap.css")" rel="stylesheet" />
