--- a/BookStore/Views/Shared/_LayoutClient.cshtml
+++ b/BookStore/Views/Shared/_LayoutClient.cshtml
@@ -18,6 +18,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>@ViewBag.Title</title>
 
+    <!--App Icon-->
+    <link rel="shortcut icon" type="image/x-icon" href="@Url.Content("~/Images/books.png")"/>
+
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&display=swap" rel="stylesheet">
 
@@ -132,7 +135,7 @@
         </nav>
         <div id="mobile-menu-wrap"></div>
         <div class="header__top__right__social">
-            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.facebook.com/minhtien.cao.35977897/"><i class="fa fa-facebook"></i></a>
             <a href="#"><i class="fa fa-twitter"></i></a>
             <a href="#"><i class="fa fa-linkedin"></i></a>
             <a href="#"><i class="fa fa-pinterest-p"></i></a>
@@ -161,7 +164,7 @@
                     <div class="col-lg-6 col-md-6">
                         <div class="header__top__right">
                             <div class="header__top__right__social align-items-center my-auto">
-                                <a href="https://www.facebook.com/nhasachphuongnam/"><i class="fa fa-facebook"></i></a>
+                                <a href="https://www.facebook.com/minhtien.cao.35977897/"><i class="fa fa-facebook"></i></a>
                                 <a href="https://twitter.com/phuongnamonline"><i class="fa fa-twitter"></i></a>
                                 <a href="https://www.linkedin.com/company/cong-ty-co-phan-van-hoa-phuong-nam/"><i class="fa fa-linkedin"></i></a>
                             </div>
@@ -258,6 +261,7 @@
                     <div class="hero__search">
                         <div class="hero__search__form">
                             <form action="@Url.Action("Search","ManageProduct")" method="POST" id="form-search">
+                                @Html.AntiForgeryToken()
                                 <input type="text" placeholder="Bạn đang tìm gì?" id="txtKeyword" name="keyword">
                                 <button type="submit" id="search_btn" class="site-btn" onclick="submit_form_search(event)">SEARCH</button>
                             </form>
@@ -330,7 +334,7 @@
                             <button type="submit" class="site-btn">Subscribe</button>
                         </form>
                         <div class="footer__widget__social">
-                            <a href="https://www.facebook.com/nhasachphuongnam/"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/minhtien.cao.35977897/"><i class="fa fa-facebook"></i></a>
                             <a href="https://www.instagram.com/nhasachphuongnam.official/"><i class="fa fa-instagram"></i></a>
                             <a href="https://twitter.com/phuongnamonline"><i class="fa fa-twitter"></i></a>
                             <a href="https://www.linkedin.com/company/cong-ty-co-phan-van-hoa-phuong-nam/"><i class="fa fa-linkedin"></i></a>
