--- a/BookStore/Views/UserSession/Register.cshtml
+++ b/BookStore/Views/UserSession/Register.cshtml
@@ -13,6 +13,7 @@
     <title>Đăng kí</title>
     <link rel="stylesheet" href="@Url.Content("~/Assets/Client/usersession/fonts/material-icon/css/material-design-iconic-font.min.css")">
     <!-- Main css -->
+    <link rel="shortcut icon" type="image/x-icon" href="@Url.Content("~/Images/books.png")" />
     <link href="@Url.Content("~/Content/bootstrap.css")" rel="stylesheet" />
     <link rel="stylesheet" href="@Url.Content("~/Assets/Client/usersession/css/style.css")">
 </head>
